--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 FLASK_ENV=production
-SECRET_KEY=H*3v4H**r9Qd!w$kZUS^Ugk9CXY8WBpgeqyZt!7W
+SECRET_KEY=
 # Razorpay
 RAZORPAY_KEY_ID=
 RAZORPAY_KEY_SECRET=
